--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -9,5 +9,6 @@ $border2active: #abacd8;
 
 $black1: #36373A;
 $black2: rgba(54, 55, 58, 0.5);
+$black3: rgba(54, 55, 58, 0.75);
 
 $mouse-device: '(hover: hover) and (pointer: fine)';
