--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -4,6 +4,7 @@
 	width: 100%;
 	height: 100%;
 	position: fixed;
+	z-index: 10;
 	top: 0;
 	left: 0;
 	background-color: rgba(35, 37, 55, 0.8);
@@ -28,7 +29,7 @@
 	}
 }
 
-.logout-modal {
+.modal1 {
 	border-radius: 12px;
 	width: 400px;
 	border: 2px solid $border1;
