--- a/src/scss/null.scss
+++ b/src/scss/null.scss
@@ -5,13 +5,18 @@
 	margin: 0;
 	border: 0;
 	outline: 0;
-	box-sizing: border-box
+	box-sizing: border-box;
+	-webkit-tap-highlight-color: transparent;
 }
 
 *::-webkit-scrollbar {
 	width: 4px;
 	border-radius: 2px;
 	background: rgba(108, 109, 171, 0.30);
+
+	@media (max-width: 768px) {
+		width: 3px;
+	}
 
 	&-thumb {
 		border-radius: 2px;
