--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,6 +25,7 @@
 	background-color: $white1;
 	border: 2px solid $border1;
 	border-radius: 20px;
+	overflow: hidden;
 
 	@media (max-width: 996px) {
 		max-height: 100%;
@@ -54,6 +55,7 @@ h3 {
 	font-weight: 400;
 	text-transform: uppercase;
 	font-size: 14px;
+	font-family: 'Montserrat';
 }
 
 h4 {
