--- a/src/pages/Anime/Anime.scss
+++ b/src/pages/Anime/Anime.scss
@@ -198,11 +198,13 @@
 	}
 
 	&__type {
-		font-size: 12px;
-		line-height: 26px;
-		height: 26px;
-		padding: 0 8px;
-		border-radius: 6px;
+		@media (max-width: 500px) {
+			font-size: 12px;
+			line-height: 26px;
+			height: 26px;
+			padding: 0 8px;
+			border-radius: 6px;
+		}
 	}
 
 	&__header {
@@ -231,8 +233,8 @@
 				font-size: 20px;
 			}
 
-			@media (max-width: 768px) {
-				font-size: calc(14px + 6 * ((100vw - 425px) / (768 - 425)));
+			@media (max-width: 500px) {
+				font-size: calc(14px + 6 * ((100vw - 425px) / (500 - 425)));
 			}
 
 			@media (max-width: 425px) {
@@ -251,8 +253,8 @@
 				font-size: 16px;
 			}
 
-			@media (max-width: 768px) {
-				font-size: calc(12px + 4 * ((100vw - 425px) / (768 - 425)));
+			@media (max-width: 500px) {
+				font-size: calc(12px + 4 * ((100vw - 425px) / (500 - 425)));
 			}
 
 			@media (max-width: 425px) {
@@ -383,7 +385,7 @@
 
 		@media (max-width: 500px) {
 			font-size: 14px;
-			flex-basis: 130px;
+			flex-basis: 100px;
 		}
 	}
 
